a 태그 색변화 끄기 시발련아

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -897,13 +897,14 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+a, a:visited, a:hover, a:active {
+  color: inherit;
+}
 a {
-  color: #337ab7;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
   text-decoration: underline;
 }
 a:focus {
