--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,11 +2,58 @@
 
 #main {
 	min-height: 100%;
-	padding-bottom: 202px; /* footer height */
+	padding-bottom: 292px; /* footer height */
 }
 
 .first-container {
 	padding-top: 50px; /* header height */
+}
+
+.comment-list {
+	padding: 20px 15px 20px 15px;
+    border-bottom: 1px #e6e3de solid;
+}
+.comment-list:last-child {
+	border: none;
+}
+.comment-list .comment-section-right {
+	margin-top: 8px;
+}
+.comment-list .user-photo-comment {
+	margin-right: 20px;
+}
+.comment-list .comment-username {
+	font-size: 15px;
+	margin-right: 10px;
+	margin-bottom: 15px;
+}
+.comment-list .comment-created-at {
+	font-size: 13px;
+	margin-right: 10px;
+	color: #aaa;
+}
+.comment-list .comment-content {
+	font-size: 14px;
+	color: #666;
+}
+
+.news-list {
+	margin-bottom: 20px;
+}
+.news-title-wrapper {
+	clear: both;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-bottom: 15px;
+}
+.news-title-wrapper h5 {
+	font-weight: bold;
+	margin: 0;
+	float: left;
+	width: 400px;
+}
+.news-title-wrapper span {
+	float: right;
 }
 
 .ticket {
@@ -70,6 +117,9 @@
 	content: "";
       display: inline-block;
       width: 100%;
+}
+.box-creator-profile .user-photo-creator {
+	margin-left: 10px;
 }
 
 .box-container {
@@ -203,6 +253,10 @@
 	margin: 0 auto;
 }
 
+.clear {
+	clear: both;
+}
+
 .bg-base {
 	background-position: center center;
 	background-size: cover;
@@ -256,6 +310,14 @@
 	-webkit-border-radius: 40px;
   	-moz-border-radius: 40px;
   	border-radius: 40px;
+}
+
+.user-photo-comment {
+	width: 70px;
+	height: 70px;
+	-webkit-border-radius: 35px;
+  	-moz-border-radius: 35px;
+  	border-radius: 35px;
 }
 
 .logo-footer {
