어드민 버튼 공통으로 적용하게 빼고 기능추가

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -320,6 +320,13 @@
   	border-radius: 35px;
 }
 
+.btn-admin {
+	position: fixed;
+    left: 0;
+    top: 100px;
+    cursor: pointer;
+}
+
 .logo-footer {
 	width: 204px;
 	height: 23px;
