포스터 버그 수정하고 실시간 변경 가능하게 ㅅㅂ

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -900,6 +900,9 @@ textarea {
 a, a:visited, a:hover, a:active {
   color: inherit;
 }
+a.btn {
+	color: white;
+}
 a {
   text-decoration: none;
 }
