--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,6 +104,9 @@
   	border-radius: 5px;
   	padding: 0px;
 }
+.ticket a .ticket-wrapper:hover {
+	background-color: #efefef;
+}
 .ticket .ticket-body {
 	padding: 13px 15px 0px 15px;
 }
@@ -132,15 +135,13 @@
 .form-group {
 	margin-bottom: 18px;
 }
+.form-group:last-child {
+	margin-bottom: 0px;
+}
 .form-group label {
 	font-weight: bold;
 	font-size: 15px;
 	color: #666;
-}
-.form-group .help-block {
-	font-size: 12px;
-	color: #999;
-	margin-bottom: 0;
 }
 
 .box-creator-profile {
@@ -315,6 +316,64 @@
 	margin: 0 auto;
 }
 
+.order-header {
+	padding: 20px 0 50px 0;
+	color: #666;
+}
+.order-header h2 {
+	color: #333;
+	font-weight: bold;
+	margin-bottom: 35px;
+}
+.order-header .col-md-4 {
+	border-right: 1px #DAD8CC solid;
+}
+.order-header .col-md-4:last-child {
+	border: none;
+}
+.order-header h3 {
+	font-size: 21px;
+	line-height: 1.4em;
+	margin: 0;
+}
+.order-header h3 strong {
+	font-size: 28px;
+}
+.order .ticket-body {
+	position: relative;
+	padding: 25px 0px 25px 0px;
+}
+.order .ticket-body p {
+	margin-top: 0px;
+	margin-bottom: 20px;
+}
+.order .ticket-body p.ps-no-margin {
+	margin-bottom: 0px;
+}
+.order .ticket-body .ticket-delivery-date {
+	font-size: 12px;
+	font-weight: normal;
+	color: #666;
+}
+.order .ticket-body .ticket-real-count {
+	margin-right: 2em;
+}
+.order span strong {
+	font-size: 30px;
+}
+.order .ps-strong-small {
+	font-size: 25px;
+}
+.order .col-md-3 {
+	padding-bottom: 10px;
+	padding-left: 25px;
+}
+.order .col-md-3 .pull-right {
+	margin-right: 12px;
+	margin-top: 8px;
+	color: #666;
+}
+
 .clear {
 	clear: both;
 }
@@ -402,6 +461,39 @@
 
 .right {
 	float: right;
+}
+
+.display-table {
+	width: 100%;
+    display: table;
+    table-layout: fixed;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.display-cell {
+    display: table-cell;
+    vertical-align: middle;
+    float: none;
+}
+
+.help-block {
+	font-size: 12px;
+	color: #999;
+	margin-bottom: 0;
+}
+.help-block.text-danger {
+	color: #cc0000;
+}
+
+.scroll-box {
+	border: 1px #DAD8CC solid;
+	-webkit-border-radius: 5px;
+  	-moz-border-radius: 5px;
+  	border-radius: 5px;
+	height: 100px;
+	overflow-y: scroll;
+	padding: 8px;
+	font-size: 14px;
 }
 
 footer {
