프로젝트 개설자 박스 오버플로우 버그 수정

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -177,6 +177,9 @@
 	text-align: center;
 	padding: 0;
 }
+.box-creator-profile .col-md-6 {
+	padding-right: 0px;
+}
 .box-creator-profile .col-md-8 {
 	padding: 0;
 }
