--- a/public/css/app.css
+++ b/public/css/app.css
@@ -331,9 +331,8 @@
 }
 .project-detail .project-label-body {
 	color: #333;
-	font-size: 17px;
-	padding: 0px;
-	font-weight: bold;
+	font-size: 15px;
+	padding: 4px 0px 0px 0px;
 }
 
 .project-grid {
