--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1380,6 +1380,11 @@ pre code {
   padding-left: 15px;
   padding-right: 15px;
 }
+.container {
+	width: 1030px;
+	max-width: none !important;
+}
+/*
 @media (min-width: 768px) {
   .container {
     width: 1030px;
@@ -1395,6 +1400,7 @@ pre code {
     width: 1030px;
   }
 }
+*/
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
@@ -1725,7 +1731,7 @@ pre code {
     margin-left: 0%;
   }
 }
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {*/
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
@@ -1882,7 +1888,7 @@ pre code {
   .col-md-offset-0 {
     margin-left: 0%;
   }
-}
+/*}*/
 @media (min-width: 1200px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
