--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5,10 +5,12 @@ html {
   -webkit-text-size-adjust: 100%;
   height: 100%;
   overflow-y: scroll;
+  min-width: 1030px;
 }
 body {
   margin: 0;
   height: 100%;
+  min-width: 1030px;
 }
 article,
 aside,
@@ -3799,6 +3801,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
 	width: 100%;
+	min-width: 1030px;
 	position: absolute;
 	min-height: 50px;
 	z-index: 9999 !important;
