--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 /* 두 페이지에서만 작동하는 반응형 */
-@media (max-width:768px) {
+@media (max-width:769px) {
   .container {
     width:100%;
   }
@@ -10,7 +10,7 @@
     min-width:100%;
   }
 }
-@media (min-width:768px) {
+@media (min-width:769px) {
   .container {
     width:1030px;
   }
@@ -197,7 +197,7 @@
 .col-xs-offset-0 {
   margin-left:0%;
 }
-@media (min-width:768px) {
+@media (min-width:769px) {
   .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12 {
     float:left;
   }
@@ -671,9 +671,15 @@
     margin-left: 0%;
   }
 }
+
+@media (max-width: 769px){
+  .col-md-3 {
+    width: 100%;
+  }
+}
 /* 공통 */
 
-@media (max-width:768px) {
+@media (max-width:769px) {
   html {
     font-size:8px;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
@@ -734,7 +740,7 @@
   position:relative;
   padding-top:660px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .header-container {
     width:100%;
     border-left:none;
@@ -756,7 +762,7 @@
   text-align:center;
   color:#fff;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .header-content {
     padding-top:130px;
     text-align:center;
@@ -768,14 +774,14 @@
   font-weight:800;
   letter-spacing:3px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .header-content h1 {
     font-size:3.5rem;
     font-weight:800;
     letter-spacing:3px;
   }
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .ct-header {
     background:url('/img/app/header-m-bg.jpg') center center no-repeat;
     background-size:cover;
@@ -847,7 +853,7 @@ video {
 .main-rightimgbox h1 {
   font-weight:500 !important;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .main-leftimgbox {
     padding:100px 30px;
   }
@@ -869,7 +875,7 @@ video {
   padding:100px 0px;
   text-align:center;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .counter {
     padding:50px 0px;
   }
@@ -878,7 +884,7 @@ video {
   font-weight:500 !important;
   padding-bottom:50px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .counter h1 {
     padding:0px 30px 50px 30px;
   }
@@ -913,7 +919,7 @@ video {
   display:block;
   margin:15px auto 10px !important;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .counter .col-xs-12 {
     padding-bottom:30px;
   }
@@ -928,7 +934,7 @@ video {
   text-align:left;
   padding:100px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .apply-header {
     text-align:center;
     padding:100px 10px 50px 10px;
@@ -980,7 +986,7 @@ video {
   text-align:center;
   background:#ececec;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .ct-effect {
     padding:30px 20px;
   }
@@ -993,7 +999,7 @@ video {
 .goapply .col-md-6 {
   padding:30px 25px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .goapply {
     padding:70px 30px 50px 30px;
   }
@@ -1001,7 +1007,7 @@ video {
 .ct-effect .col-md-4 {
   padding:0px 30px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .ct-effect .col-md-4 {
     padding:30px 20px;
   }
@@ -1047,7 +1053,7 @@ video {
 .ct-recommend .carousel-inner {
   height:200px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .ct-recommend .carousel-inner {
     height:200px;
   }
@@ -1058,7 +1064,7 @@ video {
 .ct-effect .col-md-6 {
   padding:0px 50px;
 }
-@media (max-width:768px) {
+@media (max-width:769px) {
   .ct-effect .col-md-6 {
     padding:0px 20px 60px 20px;
   }
