리얼에서 newNavIcon CSS 가 먹지 않아서 base.css 에도 코드 추가

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6249,3 +6249,13 @@ label,
 .checkbox label {
   font-weight: 300;
 }
+
+.newNavIcon{
+    font-size: 10px;
+    font-style: normal;
+    font-weight: bold;
+    position: relative;
+    top: -7px;
+		left: 2px;
+    color: #ea535a;
+}
