--- a/public/css/order/ticket.css
+++ b/public/css/order/ticket.css
@@ -198,7 +198,7 @@
   height: 90px;
 }
 
-#goods_count_up{
+.goods_count_up{
   background-image: url('/img/app/icons8-grey_96.png');
   background-repeat: no-repeat;
   background-size: 35px;
@@ -208,7 +208,7 @@
   border: none;
 }
 
-#goods_count_down{
+.goods_count_down{
   background-image: url('/img/app/icons8-reduce-90.png');
   background-repeat: no-repeat;
   background-size: 35px;
@@ -218,7 +218,7 @@
   border: none;
 }
 
-#goods_count_text{
+.goods_count_text{
   font-size: 16px;
   font-weight: bold;
   padding-left: 20px;
