--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -791,7 +791,9 @@ html, body {
 .ticket_seat_btn_order{
   /*width: 210px;*/
   width: 100%;
-  height: 50px;
+  /*height: 50px;*/
+  height: 100%;
+
 }
 
 .ticket_time_text_order_category{
