티켓팅 윈도우 화면 최적화

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -867,6 +867,10 @@ html, body {
   .timepicker-container-outer-container-flex{
     margin-top: 0px;
   }
+
+  .ticket_count_input_wrapper{
+    margin-top: 0px;
+  }
 }
 
 
