--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -694,6 +694,11 @@
     #detail_ticket_md{
       width: 100%;
     }
+
+    .detail_story_wrapper iframe{
+      width: 100%;
+      height: 100%;
+    }
 }
 
 @media (max-width:400px) {
