댓글 글 정렬 코드 추가

--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -571,6 +571,10 @@
   font-weight: bold;
 }
 
+.comment-content{
+  padding-left: 70px;
+}
+
 @media (max-width:1030px){
   #isMobile{
     display: block;
