주문취소시 order가 delete되던 이슈 수정 ->delete 되지 않고 state로 관리 되게 수정
예전 티켓 css 수정

--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -456,7 +456,11 @@
     margin-right:10px;
 }
 .ticket span {
+  /*
     font-size:17px;
+    font-weight:600;
+    */
+    font-size:12px;
     font-weight:600;
 }
 .ticket-btn {
