--- a/public/css/app.css
+++ b/public/css/app.css
@@ -128,8 +128,12 @@ body {
 	padding:13px 15px 0px 15px;
 }
 .ticket .ticket-body span {
+	/*
 	font-weight:bold;
 	font-size:15px;
+	*/
+	font-weight:bold;
+	font-size:12px;
 }
 .ticket .ticket-body span img {
 	margin-top:-5px;
